# arMI

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  index.html
src/: Makefile  Makefile.am  Makefile.in  arg.c  arg.h  argali.c  argali.h  argexp.c  argexp.h  armi.c  armi.h  armi_mpi.c  armiali.c  armiali.h  armiexp.c  armiexp.h  config.h  config.h.in  expr.h  getexprs.c  getexprs.h  getseqs.c  getseqs.h  matrix.c  matrix.h  rmi.h  safe.c  safe.h  seq.h  tags
tests/: Makefile  Makefile.am  Makefile.in  baseset_dist.sh  dist.1.fasta  dist.10.fasta  dist.11.fasta  dist.12.fasta  dist.13.fasta  dist.14.fasta  dist.15.fasta  dist.16.fasta  dist.17.fasta  dist.18.fasta  dist.19.fasta  dist.2.fasta  dist.20.fasta  dist.3.fasta  dist.4.fasta  dist.5.fasta  dist.6.fasta  dist.7.fasta  dist.8.fasta  dist.9.fasta  expression.sh  help.sh  in.fasta  random.sh  rasH_fragment.fasta  rasH_fragment.sh
