#===============================================================================
# Makefile.am : analytical residual column mutual information
#===============================================================================

bin_PROGRAMS = armi

AM_CFLAGS = -Wall

armi_SOURCES = \
armi.c armi.h arg.c arg.h getseqs.c getseqs.h matrix.h matrix.c safe.c safe.h \
seq.h

CLEANFILES = $(TARGET) *.o 
DISTCLEANFILES = libtool config.cache config.log

