#===============================================================================
# Makefile.am : for automake
#===============================================================================

noinst_DATA = \
	rasH_fragment.fasta \
	dist.1.fasta dist.2.fasta   dist.3.fasta  dist.4.fasta  dist.5.fasta  \
	dist.6.fasta dist.7.fasta   dist.8.fasta  dist.9.fasta  dist.10.fasta \
	dist.11.fasta dist.12.fasta dist.13.fasta dist.14.fasta dist.15.fasta \
	dist.16.fasta dist.17.fasta dist.18.fasta dist.19.fasta dist.20.fasta \
	rownames.dat colnames.dat expr_tf.dat

noinst_SCRIPTS = \
	help.sh \
	random.sh \
	rasH_fragment.sh \
	baseset_dist.sh \
	expression.sh

EXTRA_DIST = $(noinst_DATA) $(noinst_SCRIPTS)

TESTS = $(noinst_SCRIPTS)

